# RE

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/: index.html
public/: custom.css  index.html  output.css  script.js
rentnride/: asgi.py  settings.py  urls.py  wsgi.py
static/: kjhk.txt
static/css/: output.css
static/js/: script.js
tailwind_theme/static_src/: package-lock.json  tailwind.config.js
