[tool.poetry]
name = "rentnride"
version = "0.1.0"
description = "This is a car rental project"
authors = ["liu"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
black = "^22.1.0"
django-tailwind = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
